[package]
name = "objr"
version = "1.0.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Drew's very fast ObjC Rust bindings"
homepage = "https://sealedabstract.com/code/objr"
repository = "https://github.com/drewcrawford/objr"
keywords = ["objc", "macos", "ffi", "bindings"]
categories = ["os::macos-apis", "development-tools::ffi", "os"]
rust-version = "1.63.0"
exclude = [".*","art"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objr_procmacro = { version = "1.0.0",path = "procmacro" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic_bench"
harness = false

[build-dependencies]
cc = "1"